--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".screens.DeckCreator"></activity>
+        <activity android:name=".screens.StudyView"></activity>
+        <activity android:name=".screens.DeckCreator" />
         <activity android:name=".screens.CardAdder" />
         <activity
             android:name=".screens.DeckDesigner"
