--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".screens.study_review"></activity>
+        <activity android:name=".screens.StudyReview"></activity>
         <activity
             android:name=".screens.StudyStagingArea"
             android:label="@string/title_activity_study_staging_area"
